--- a/public/index.html
+++ b/public/index.html
@@ -31,4 +31,16 @@
     </audio>
     <div id="root"></div>
   </body>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4HHKG9HL2E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'G-4HHKG9HL2E')
+  </script>
 </html>
